# BioMed-Exp-Agent

./: .gitignore  Agent技术架构设计.md  README.md  docker-compose.yml  pyproject.toml
Behavior Analysis Survey/Mouse/: 小鼠行为分析计算方法.doc  莫里斯水迷宫实验.docx
Behavior Analysis Survey/Worm/: 线虫行为分析计算方法.doc
Behavior Analysis Survey/Zebrafish/: 斑马鱼行为分析计算方法.docx
docs/: api_reference.md  index.md  installation.md  quickstart.md
notebooks/: 01_quickstart.ipynb  02_tool_development.ipynb
scripts/: run_mcp_inspector.sh  setup_dev.sh
src/: __init__.py
src/agent/: __init__.py  graph.py  prompts.py  state.py
src/agent/memory/: __init__.py  models.py  store.py
src/agent/nodes/: __init__.py  execute.py  perceive.py  plan.py  reflect.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  experiments.py  websocket.py
src/llm/: __init__.py  client.py
src/memory/: __init__.py  client.py
src/scientific/: __init__.py  audit.py  validator.py
src/scientific/protocols/: __init__.py  epm_v1.0.yaml  morris_water_maze_v1.3.yaml  open_field_v2.1.yaml  worm_v1.0.yaml  zebrafish_plate_v1.0.yaml
src/tools/: __init__.py  calculate.py  detect.py  followup.py  quality.py  report.py  segment.py  server.py  skeleton.py  track.py  visualize.py
src/ui/: app.py
